--- a/index.html
+++ b/index.html
@@ -6,35 +6,56 @@
     <title>GigaChad</title>
 </head>
 
-
 <body>
-    <img src="S.T.A.L.K.E.R._Logo (1).png" alt="">
-    <h1>История игры S.T.A.L.K.E.R.</h1>
-    <p><em>Меченый это сталкер</em> </p>
-    <p>только живой и <strong>не знает</strong> что он em меченный</p>
-    <hr>
-
-    <h2>Зов приряти</h2>
-    <li>
-        <a href="https://g.co/kgs/wSab51" target="_blank">
-            тык сюда 1</a>
-    </li>
-    <h2>Чистое небо</h2>
-    <li>
-        <a href="https://g.co/kgs/V2MNE1" target="_blank">
-            тык сюда 2 </a>
-    </li>
-    <h2>Обзоры</h2>
+    <table>
+        <tr>
+            <td>
+                <img src="S.T.A.L.K.E.R._Logo (1).png">
+            </td>
+            <td>
+                <h1>История игры S.T.A.L.K.E.R.</h1>
+                <p><em>Меченый это сталкер</em> </p>
+                <p>только живой и <strong>не знает</strong> что он em меченный</p>
+            </td>
+        </tr>
+    </table>
+    <hr noshade="0" size="10">
+    <table cellspacing=45>
+        <tr>
+            <td>
+                <h2>Тень Чернобыля</h2>
+                <li>
+                    <a href="https://g.co/kgs/f95kkZ" target="_blank">
+                        тык сюда 1</a>
+                </li>
+            </td>
+            <td>
+                <h2>Чистое небо</h2>
+                <li>
+                    <a href="https://g.co/kgs/V2MNE1" target="_blank">
+                        тык сюда 2 </a>
+                </li>
+            </td>
+            <td>
+                <h2>Зов приряти</h2>
+                <li>
+                    <a href="https://g.co/kgs/wSab51" target="_blank">
+                        тык сюда 1</a>
+                </li>
+            </td>
+        </tr>
+    </table>
+    <hr noshade="0" size="10">
+    <h2>                                     Обзоры                      </h2>
     <ul type=square>
-        <li>
-            <a href="https://youtu.be/7G7iH_J87Fo" target="_blank">
-                Зов приряти</a>
-        </li>
-        <li> <a href="https://youtu.be/t5RHmQxWgbw" target="_blank">
-                Чистое небо</a></li>
-        <li> <a href="https://youtu.be/AZ1uiU5EhDs" target="_blank">
+        <li><a href="https://youtu.be/AZ1uiU5EhDs" target="_blank">
                 Тень Чернобыля</a></li>
+        <li><a href="https://youtu.be/t5RHmQxWgbw" target="_blank">
+                Чистое небо</a></li>
+        <li><a href="https://youtu.be/7G7iH_J87Fo" target="_blank">
+                Зов приряти</a></li>
     </ul>
+    <hr noshade="0" size="10">
     <h2><a href="media777.html">Медиа</a></h2>
 
 </body>
