--- a/media777.html
+++ b/media777.html
@@ -7,13 +7,29 @@
 </head>
 
 <body>
+    <h2>Связаться со мной</h2>
     <form>
-        <ol>
-            <input type="text">
-            <input type="number">
-            <input type="password">
-        </ol>
-
+        <label for="name">Ваше имя</label>
+        <input type="text" id="name" placeholder="Начните писать">
+        <br>
+        <label for="name">Ваша Фамилия</label>
+        <input type="text" id="name" placeholder="Начните писать">
+        <br>
+        <label for="name">Ваше Отчество</label>
+        <input type="text" id="name" placeholder="при наличии">
+        <br>
+        <label for="name">Адрес электронной почты</label>
+        <input type="text" id="name" placeholder="Начните писать"></label>
+        <br>
+        <label for="data">Дата составления формы</label>
+        <input type="date" id="data" placeholder="Начните писать">
+        <br>
+        <input type="submit" id="otpravka"></label>
+        <label for="otpravka">Нажимая на кнопку "отправить" Вы соглашаетесь с пользовательским соглашением согласно
+            152-ФЗ</label>
+        <br>
+        <label for="text">Ваше сообщение</label>
+        <textarea name="" id="" cols="100" rows="10"></textarea>
+        <br>
     </form>
-
 </body>
